# C-Primer-Plus-Exercises

./: .gitignore  CMakeLists.txt  README.md
practise/algorithm/: skip_list.c
practise/array/: dynamic_array_test.c
practise/attribute/: attribute_test.c
practise/function/: function_pointer.c  function_pointer_in_struct.c
practise/kernel_function/: time_after_test.c
practise/thread/: thread_test.c
practise/variable_param/: variable_param_test.c
